<resources>
    <string name="app_name">ElectricCarApp</string>
    <string name="main_title">Electric Car</string>
    <string name="tab_cars">Carros</string>
    <string name="tab_favorites">Favoritos</string>
    <string name="card_label_price">Preço</string>
    <string name="card_label_battery">Bateria</string>
    <string name="card_label_potency">Potência</string>
    <string name="card_label_recharge">Recarga</string>
    <string name="hint_kwh_price">Preço kWh</string>
    <string name="hint_km_traveled">kM Percorrido</string>
    <string name="btn_label_calculate">Calcular</string>
    <string name="tv_autonomy_calculate">Calcular autonomia</string>
    <string name="open_calculator">Abrir calculadora de autonomia</string>
    <string name="no_internet">Sem internet</string>
    <string name="no_internet_message">Ops, internet não disponível</string>
    <string name="response_error">Algo deu errado, por favor tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>
    <string name="description_favorite">favorite</string>

    <string-array name="array_cities">
        <item>Araraquara</item>
        <item>Marília</item>
        <item>Taquaritinga</item>
        <item>São Paulo</item>
    </string-array>
</resources>
