<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/tv_autonomy_calculate"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_autonomy_calculate"
        app:layout_constraintStart_toStartOf="@+id/iv_close"
        app:layout_constraintTop_toBottomOf="@+id/iv_close" />

    <EditText
        android:id="@+id/et_kwh_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/hint_kwh_price"
        android:ems="10"
        android:hint="@string/hint_kwh_price"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_autonomy_calculate" />

    <EditText
        android:id="@+id/et_km_traveled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/hint_km_traveled"
        android:ems="10"
        android:hint="@string/hint_km_traveled"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="@+id/et_kwh_price"
        app:layout_constraintStart_toStartOf="@+id/et_kwh_price"
        app:layout_constraintTop_toBottomOf="@id/et_kwh_price" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_label_calculate"
        app:layout_constraintEnd_toEndOf="@+id/et_km_traveled"
        app:layout_constraintStart_toStartOf="@+id/et_km_traveled"
        app:layout_constraintTop_toBottomOf="@+id/et_km_traveled" />

    <TextView
        android:id="@+id/tv_autonomy_result"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_calculate"
        app:layout_constraintStart_toStartOf="@+id/btn_calculate"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate"
        tools:text="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>