<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/electric_car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/card_label_price"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_car" />

            <TextView
                android:id="@+id/tv_price_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/tv_price"
                app:layout_constraintTop_toTopOf="@+id/tv_price" />

            <TextView
                android:id="@+id/tv_battery"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/card_label_battery"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_price_value" />

            <TextView
                android:id="@+id/tv_battery_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/tv_battery"
                app:layout_constraintTop_toTopOf="@+id/tv_battery" />

            <TextView
                android:id="@+id/tv_potency"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/card_label_potency"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_battery" />

            <TextView
                android:id="@+id/tv_potency_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/tv_potency"
                app:layout_constraintTop_toTopOf="@+id/tv_potency" />

            <TextView
                android:id="@+id/tv_recharge"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/card_label_recharge"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_potency" />

            <TextView
                android:id="@+id/tv_recharge_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/tv_recharge"
                app:layout_constraintTop_toTopOf="@+id/tv_recharge" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
